-------------------------------------------------------------
Release 1 | Beta 0 | Development 4 | Experimental 2

* Added ShadowMap
* Added Filter
* Added Uniform
* Added UniformFloat
* Added Uniforms
* Added UniformVector2D
* Added UniformVector3D

-------------------------------------------------------------
Release 1 | Beta 0 | Development 4 | Experimental 1

* Added ShadowData

* Fixed bug: Matrix.ortho() was wrong

-------------------------------------------------------------
Release 1 | Beta 0 | Development 4 | Experimental 0

* Added IndexedModel
* Added ModelFace
* Added ModelVertex
* Added Texture
* Added Textures
* Added TextureParameters
* Added FBO
* Added RenderTexture

* Removed Face

-------------------------------------------------------------
Release 1 | Beta 0 | Development 3 | Experimental 3

* Added FBO
* Added RenderTexture

* Fixed bug: Last commit broke lighting positions

-------------------------------------------------------------
Release 1 | Beta 0 | Development 3 | Experimental 2

* Added Texture
* Added Textures
* Added TextureParameters

-------------------------------------------------------------
Release 1 | Beta 0 | Development 3 | Experimental 1

* Added IndexedModel
* Added ModelFace
* Added ModelVertex

* Removed Face

-------------------------------------------------------------
Release 1 | Beta 0 | Development 3 | Experimental 0

* Added BaseLight
* Added DirectionalLight
* Added PointLight
* Added SpotLight
* Added LitScene
* Added LitSceneInterface
* Added RenderTest
* Added ShaderPreprocessor
* Added ShaderPreprocessorDirective
* Added IncludeDirective
* Added Lights

* Created the package org.andor.utils.shader

* Removed PhongPass
* Removed 'texture' in Renderer, the textures for objects
  are now stored in the diffuseMap in their material instance

-------------------------------------------------------------
Release 1 | Beta 0 | Development 2 | Experimental 3

* Added Lights

* Updated lighting system
