@@ -1,5 +1,7 @@
 #include "Sampling.fs"
 
+uniform float andor_useShadows;
+
 float calculateShadowAmount() {
 	vec3 shadowMapCoords = (frag_andor_shadowMapCoords.xyz / frag_andor_shadowMapCoords.w) * vec3(0.5) + vec3(0.5); //OpenGL usually does this between vertex and fragment shaders
 	return sampleVarianceShadowMap(shadowMapCoords.xy, shadowMapCoords.z);
@@ -14,5 +16,7 @@ void main() {
 	else
 		normal = normalize(frag_andor_normal);
 	
-	gl_FragColor = andor_calculateColour(textureCoord) * (andor_calculateLightingEffect(normal)) * calculateShadowAmount();
+	gl_FragColor = andor_calculateColour(textureCoord) * (andor_calculateLightingEffect(normal));
+	if (andor_useShadows > 0.5)
+		gl_FragColor *= calculateShadowAmount();
 }
