@@ -7,6 +7,6 @@ void main() {
 	float dx = dFdx(depth);
 	float dy = dFdy(depth);
 	float moment2 = depth * depth + 0.25 * (dx * dx + dy * dy);
-	gl_FragColor = vec4(depth, moment2, 0.0, 1.0);
+	gl_FragColor = vec4(1.0 - depth, 1.0 - moment2, 0.0, 1.0);
 	//gl_FragColor = vec4(gl_FragCoord.z);
 }
